app/styles/components/_buttons.scss
/*
// BUTTONS //
*/

@mixin button($backgroudColor, $textColor) {
    background-color: $backgroudColor;
    color: $textColor;
    padding: .8em 1em;
    border-radius: .3em;
    min-width: 170px;
    min-height: 50px;
    line-height: 27px;
    transition: background-color 250ms;
    text-decoration: none;
    &:hover {
        transition: background-color 250ms;
        text-decoration: none;
    }
    &:active {
        text-decoration: none;
    }
    .svg-icon {
        fill: $textColor;
        width: 1em;
        height: 1em;
    }
}

.btn {
    padding-right: 15px;
    padding-left: 15px;
}

.btn--primary {
    font-weight: bold;
    @include button($font-color-heading, white);

    &:hover {
        background-color: #26292f;
    }

    &:active {
        background-color: #000;
    }
}

.btn--secondary {
    @include button(#ebebeb, black);

    &:hover {
        background-color: $brand-secondary;
    }

    &:active {
        background-color: #d1d1d1;
    }
}

.btn--tertiary {
    @include button(#fff, #373b44);
    border: 1px solid #dddddd;
    font-weight: bold;

    &:hover {
        background-color: #e8e8e8;
    }

    &:active {
        background-color: #ddd;
    }
}

.btn--disabled {
    background-color: #dbdee3;
    color: $font-color-disabled;
    .svg-icon {
        fill: $font-color-disabled;
    }
}

.btn:disabled{
    background-color: #dbdee3;
    color: $font-color-disabled;
    .svg-icon {
        fill: $font-color-disabled;
    }
}

.btn--small {
    max-height: 35px;
    min-height: 35px;
    line-height: 15px;
}

.btn--medium {
    min-height: 40px;
    max-height: 40px;
    line-height: 14px;
}

.btn--new-project {
    float: right;
    padding-right: 40.5px;
    padding-left: 40.5px;
}

.btn--delete {
    float: right;
    padding: 10px 27px 0 0;
    min-width: 50px;
    .svg-icon {
        width: 11px;
        height: 13px;
        fill: #d82b32;
        position: relative;
        top: -4px;
        left: 14px;
    }
}

.btn--subscribe-theme {
    background-color: #ffffff;
    font-weight: bold;
}

.btn--social {
    width: 110px;
    font-size: .9375em;
    font-weight: bold;
    padding: .9em;
    color: white;
    height: 34px;
    line-height: 10px;
    transition: background-color 120ms linear;
}

.btn--dropdown {
    color: $font-color-secondary;
    flex: 1;
    text-align: left;
    height: 34px;
    font-style: italic;
    min-width: 70px;
    padding-right: .2em;
    padding-left: .5em;
    display: flex;
    align-items: center;
    white-space: nowrap;
    text-overflow: ellipsis;
    overflow: hidden;
    position: relative;

    .dropdown__heading {
        font-style: normal;
        display: inline-block;
        vertical-align: middle;
        color: #5d6069;
        cursor: pointer;
        margin-left: .2em;
        font-weight: 400;
        max-width: 100%;
        overflow: hidden;
        white-space: nowrap;
        text-overflow: ellipsis;
        padding-right: 10px;
    }

    :first-child {
        margin-left: 11px;
        font-style: normal;
    }
}

.btn--dropdown--active {
    color: $font-color-base;
}

.button-group {
    float: right;
    padding: 0;
    button, a {
        margin: 0 10px;
        float: right;
        &:first-child {
            margin-right: 0;
        }
    }
}

.btn--row {
    width: 100%;
    margin-top: 21px;
}

